# xuanxue-ai

./: .gitignore  Dockerfile  README.md  README_EN.md  SKILL.md  pyproject.toml
src/xuanxue/: __init__.py  server.py
src/xuanxue/analyzers/: __init__.py  dimension_extractor.py  prompts.py
src/xuanxue/calculators/: __init__.py  bazi_engine.py  chenggu_engine.py  jinkou_engine.py  liuren_engine.py  liuyao_engine.py  meihua_engine.py  numerology_engine.py  qimen_engine.py  vedic_engine.py  western_engine.py  ziwei_engine.py
src/xuanxue/core/: __init__.py  calendar_utils.py  cli.py  dispatcher.py  input_schema.py  methods.py  registry.py  synthesis.py
src/xuanxue/export/: __init__.py  report.py
tests/: test_bazi_engine.py  test_input_schema.py  test_new_calculators.py  test_new_engines.py  test_report.py
