[project]
name = "xuanxue-unified-skill"
version = "0.1.0"
description = "综合玄学 Skill — 融合八字、紫微、奇门、称骨、占星等多套方法的统一命理分析引擎"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "xuanxue-unified" }]
keywords = ["bazi", "ziwei", "qimen", "astrology", "metaphysics", "fortune-telling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "pydantic>=2.0",
    "lunardate>=0.2",
    "chinese-calendar>=1.9",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
xuanxue = "xuanxue.core.cli:main"
xuanxue-server = "xuanxue.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xuanxue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
